# single-task-mcp-server

./: cloudbuild.yaml  dockerfile  main.py  pyproject.toml  requirements.txt  server.py
services/: cleanfiles.py  pdf2wordconverter.py
