[project]
name = "mcp-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.118.3",
    "fastmcp>=2.12.4",
    "pdf2docx>=0.5.8",
    "python-multipart>=0.0.20",
    "uvicorn>=0.37.0",
    "pymupdf==1.23.0",
]
